--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@ layoult: defaut
 ---
 
 {% for curso in site.data.horarios.cursos %}
-<h1>{{curso.nome}}</h1>
+  <h1>{{curso.nome}}</h1>
+  {% for turma in curso.turmas %}
+    <h3>{{turma.nome}}</h3>
+  {% endfor %}
 {% endfor %}
