--- a/index.html
+++ b/index.html
@@ -6,5 +6,44 @@ layoult: defaut
   <h1>{{curso.nome}}</h1>
   {% for turma in curso.turmas %}
     <h3>{{turma.nome}}</h3>
+    <table style="width:100%">
+      <tr>
+        <th>{% for turma in curso.colunas %}</th>
+        {% endfor %}
+      </tr>
+     </table>
   {% endfor %}
 {% endfor %}
+
+
+
+<!--
+<!DOCTYPE html>
+<html>
+<body>
+
+<table style="width:100%">
+  <tr>
+    <th>Firstname</th>
+    <th>Lastname</th> 
+    <th>Age</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+  <tr>
+    <td>John</td>
+    <td>Doe</td>
+    <td>80</td>
+  </tr>
+</table>
+
+</body>
+</html>
