--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layoult: defaut
     <h3>{{turma.nome}}</h3>
     <table style="width:100%">
       <tr>
-        <th>{% for turma in curso.colunas %}</th>
+        {% for coluna in turmas.colunas %}
+        <th>{{coluna.colunas}}</th>
         {% endfor %}
       </tr>
      </table>
