--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layoult: defaut
 ---
 
+<link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
 <h1>HORÁRIOS</h1>
 
 {% for curso in site.data.horarios.cursos %}
