--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layoult: defaut
 ---
-
+<link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <h1>HORÁRIOS</h1>
 
 {% for curso in site.data.horarios.cursos %}
