--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layoult: defaut
+layoult: default
 ---
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <h1>HORÁRIOS</h1>
