--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
-<h1>HORÁRIOS</h1>
+<h1 align="center">HORÁRIOS</h1>
 
 {% for curso in site.data.horarios.cursos %}
   <h1>{{curso.nome}}</h1>
