--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
-<div background="https://www.google.com.br/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiw6Z2noITSAhXTPpAKHSyeC60QjRwIBw&url=http%3A%2F%2Fwww.tedioso.com%2F203573-fundos-molduras-fotos-fundo-verde-claro.html&psig=AFQjCNF1tOBJgKHdoRwFMEvHP3EdFAS37g&ust=1486772195011349"><h1 align="center">HORÁRIOS IFPB - Campus Guarabira</h1></div>
+<div background=""><h1 align="center">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 {% for curso in site.data.horarios.cursos %}
   <h1 align="center">{{curso.nome}}</h1>
