--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
-<div background=""><h1 align="center">HORÁRIOS IFPB - Campus Guarabira</h1></div>
+<div background="fundo-verde-claro (1).png"><h1 align="center">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 {% for curso in site.data.horarios.cursos %}
   <h1 align="center">{{curso.nome}}</h1>
