--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="CSS/stylesheet.css" href="/lib/w3.css">
+<link rel="stylesheet" href="/lib/w3.css">
 <h1 align="center"; ; background= "fundo-verde-claro (1).png">HORÁRIOS IFPB - Campus Guarabira</h1>
 
 <div class="w3-container">
@@ -11,12 +11,14 @@ layout: default
   <h1 align="center">{{curso.nome}}</h1>
   {% for turma in curso.turmas %}
     <h2>{{turma.nome}}</h2>
-    <table class="table-kauan"; class="w3-table w3-striped">
-      <tr>
+    <table class="table-kauan"; class="w3-table-all">
+      <thead>
+      <tr class="w3-red">
         {% for coluna in turma.colunas %}
           <th>{{coluna}}</th>
         {% endfor %}
-      </tr>
+       </tr>
+       <thead>
         {% for linha in turma.linhas%}
             <tr>
             <div class="hora"><td>{{linha.horario}}</td></div>
