--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/lib/w3.css">
+<link rel="stylesheet" href="CSS/w3.css">
 <h1 align="center"; ; background= "fundo-verde-claro (1).png">HORÁRIOS IFPB - Campus Guarabira</h1>
 
 <div class="w3-container">
