--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
     <h2>{{turma.nome}}</h2>
     <table class="table-kauan"; class="w3-table-all">
       <thead>
-      <tr class="w3-red">
+      <tr class="w3-striped">
         {% for coluna in turma.colunas %}
           <th>{{coluna}}</th>
         {% endfor %}
