--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
   <h1 align="center">{{curso.nome}}</h1>
   {% for turma in curso.turmas %}
     <h2>{{turma.nome}}</h2>
-    <table class="table-kauan"; class="w3-striped">
+    <table class="table-kauan"; class="w3-table-all">
       <thead>
       <tr class="w3-green">
         {% for coluna in turma.colunas %}
