--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
-<h1 align="center"; background= "fundo-verde-claro (1).png">HORÁRIOS IFPB - Campus Guarabira</h1>
+<div background= "fundo-verde-claro (1).png"><h1 align="center">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 <div class="w3-container">
 {% for curso in site.data.horarios.cursos %}
