--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@ layout: default
 <link rel="stylesheet" href="CSS/w3.css">
 <div style="background-image:url(verde.png);height: 200px; width:100%;text-align:center;vertical-align:middle;"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
+<div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <p>Link 1</p>
+    <p>Link 2</p>
+    <p>Link 3</p>
+  </div>
+</div>
+
 <div class="w3-container">
 {% for curso in site.data.horarios.cursos %}
   <h1 align="center">{{curso.nome}}</h1>
