--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@ layout: default
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
+<script src="js/javascript.js"></script>
+
 <div style="background-image:url(verde.png);height: 200px; width:100%;text-align:center;vertical-align:middle;"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
+
+
+
 
 <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
