--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
 </div>
 
 {% for professort in site.data.kaumkadois.professores %}
-  <div class="sucesso" id="{{professort}" style="display: none">
+  <div class="sucesso" id="{{professort}}" style="display: none">
 <div class="w3-container">
 {% for curso in site.data.horarios.cursos %}
   <h1 align="center">{{curso.nome}}</h1>
