--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@ layout: default
 <link rel="stylesheet" href="CSS/w3.css">
 <div style="background-image:url(verde.png);height: 200px; width:100%;text-align:center;vertical-align:middle;"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
+
 <div class="w3-container">
+  <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
 {% for curso in site.data.horarios.cursos %}
   <h1 align="center">{{curso.nome}}</h1>
   {% for turma in curso.turmas %}
