--- a/index.html
+++ b/index.html
@@ -6,37 +6,73 @@ layout: default
 <link rel="stylesheet" href="CSS/w3.css">
 <div style="background-image:url(verde.png);height: 200px; width:100%;text-align:center;vertical-align:middle;"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
+<script>
+    function displayBlock(n) {
+      document.getElementById(n).style.display = "block";
+    }
+</script>
 
-<div class="w3-container">
+<div>
+  <button onclick="displayBlock('turmas')" class="dropbtn">Turmas</button>
+  <button onclick="displayBlock('professores')" class="dropbtn">Professores</button>
+</div>
+
+<div id = "turmas" class="w3-container" style="display:none">
   <div class="dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
+    <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+    <a href="#about">About</a>
+    <a href="#base">Base</a>
+    <a href="#blog">Blog</a>
+    <a href="#contact">Contact</a>
+    <a href="#custom">Custom</a>
+    <a href="#support">Support</a>
+    <a href="#tools">Tools</a>
   </div>
-</div>
-{% for curso in site.data.horarios.cursos %}
+  {% for curso in site.data.horarios.cursos %}
   <h1 align="center">{{curso.nome}}</h1>
-  {% for turma in curso.turmas %}
-    <h2>{{turma.nome}}</h2>
-    <table class="w3-table w3-striped w3-table-all">
-      <thead>
-      <tr class="w3-green">
-        {% for coluna in turma.colunas %}
-          <th>{{coluna}}</th>
-        {% endfor %}
-       </tr>
-       <thead>
-        {% for linha in turma.linhas%}
-            <tr>
-            <div class="hora"><td>{{linha.horario}}</td></div>
-            {% for aula in linha.aulas %}
-                <div class="aula"><td>{{aula.disciplina}}<br>{{aula.professor}}</td></div>
+    {% for turma in curso.turmas %}
+      <div id="{{turma.nome}}">
+        <h2>{{turma.nome}}</h2>
+        <table class="w3-table w3-striped w3-table-all">
+          <tr class="w3-green">
+            {% for coluna in turma.colunas %}
+              <th>{{coluna}}</th>
             {% endfor %}
-        </tr>
-        {% endfor%}
-     </table>
+            </tr>
+            {% for linha in turma.linhas%}
+                <tr>
+                  <td class="hora">{{linha.horario}}</td>
+                  {% for aula in linha.aulas %}
+                    <td class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
+                  {% endfor %}
+                </tr>
+            {% endfor%}
+         </table>
+        </div>
+    {% endfor %}
   {% endfor %}
-{% endfor %}
+</div>
+
+<script>
+  function myFunction() {
+      document.getElementById("myDropdown").classList.toggle("show");
+  }
+
+  function filterFunction() {
+      var input, filter, ul, li, a, i;
+      input = document.getElementById("myInput");
+      filter = input.value.toUpperCase();
+      div = document.getElementById("myDropdown");
+      a = div.getElementsByTagName("a");
+      for (i = 0; i < a.length; i++) {
+          if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
+              a[i].style.display = "";
+          } else {
+              a[i].style.display = "none";
+          }
+      }
+  }
+ </script>
 </div>
