--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     }
 </script>
 
-<div>
+<div style="background-image:url(37667c85-a4cc-403a-9ebc-dd613be59b9b.jpeg);height: 700px; width:100%;text-align:center;vertical-align:middle;">
   <button onclick="displayBlock('turmas')" class="dropbtn">Turmas</button>
   <button onclick="displayBlock('professores')" class="dropbtn">Professores</button>
 </div>
