--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
-<div style="background-image:url(verde.png);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
+<div style="background-image:url(KE3oln.jpg);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 <script>
     function displayBlock(n) {
@@ -12,7 +12,7 @@ layout: default
     }
 </script>
 
-<div style="background-image:url(KE3oln.jpg);height: 500px; width:100%;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;text-align:center;vertical-align:middle;">
+<div style="background-image:url(logo_ifpb.png);height: 500px; width:100%;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;text-align:center;vertical-align:middle;">
   <button onclick="displayBlock('turmas')" class="dropbtn">Turmas</button>
   <button onclick="displayBlock('professores')" class="dropbtn">Professores</button>
 </div>
