--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
     }
 </script>
 
-<div style="background-image:url(logo_ifpb.png);height: 500px; width:100%;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;text-align:center;vertical-align:middle;">
+<div style="background-image:url(IF-LONGO1.jpg);height: 500px; width:100%;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;text-align:center;vertical-align:middle;">
   <button onclick="displayBlock('turmas')" class="dropbtn">Turmas</button>
   <button onclick="displayBlock('professores')" class="dropbtn">Professores</button>
 </div>
