--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/w3.css">
-<div style="background-image:url(verde3.jpg);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
+<div style="background-image:url(img/background-title.jpg);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 <script>
     function displayBlock(n) {
