--- a/index.html
+++ b/index.html
@@ -6,74 +6,85 @@ layout: default
 <link rel="stylesheet" href="CSS/w3.css">
 <div style="background-image:url(img/background-title.jpg);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
-<script>
-    function displayBlock(n) {
-      document.getElementById(n).style.display = "block";
-    }
-</script>
 
 <div style="background-image:url(img/ifpb-foto.jpg);height: 500px; width:100%;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;text-align:center;vertical-align:middle;">
-  <button onclick="displayBlock('turmas')" class="dropbtn">Turmas</button>
-  <button onclick="displayBlock('professores')" class="dropbtn">Professores</button>
+  <button onclick="Turma()" class="dropbtn">Turmas</button>
+  <button onclick="Professor()" class="dropbtn">Professores</button>
 </div>
 
 <div id = "turmas" class="w3-container" style="display:none">
   <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-      <div id="myDropdown" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href="#about">About</a>
-        <a href="#base">Base</a>
-        <a href="#blog">Blog</a>
-        <a href="#contact">Contact</a>
-        <a href="#custom">Custom</a>
-        <a href="#support">Support</a>
-        <a href="#tools">Tools</a>
-      
-  </div>
-  {% for curso in site.data.horarios.cursos %}
-  <h1 align="center">{{curso.nome}}</h1>
-    {% for turma in curso.turmas %}
-      <div id="{{turma.nome}}">
-        <h2>{{turma.nome}}</h2>
-        <table class="w3-table w3-striped w3-table-all">
-          <tr class="w3-green">
-            {% for coluna in turma.colunas %}
-              <th>{{coluna}}</th>
-            {% endfor %}
-            </tr>
-            {% for linha in turma.linhas%}
-                <tr>
-                  <td class="hora">{{linha.horario}}</td>
-                  {% for aula in linha.aulas %}
-                    <td class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
-                  {% endfor %}
+    <button onclick="myFunction('myDropdownTurma')" class="dropbtn">Pesquisa</button>
+    <div id="myDropdownTurma" class="dropdown-content">
+        <input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')">
+        {% for turma in site.data.turma.turmas %}
+            <a href="#{{turma}}">turma</a>
+        {% endfor %}
+    </div>
+    {% for curso in site.data.horarios.cursos %}
+        <h1 align="center">{{curso.nome}}</h1>
+        {% for turma in curso.turmas %}
+          <div id="{{turma.nome}}">
+            <h2>{{turma.nome}}</h2>
+            <table class="w3-table w3-striped w3-table-all">
+              <tr class="w3-green">
+                {% for coluna in turma.colunas %}
+                    <th class="head_table">{{coluna}}</th>
+                {% endfor %}
                 </tr>
-            {% endfor%}
-         </table>
-        </div>
+                {% for linha in turma.linhas%}
+                    <tr>
+                      <td class="hora">{{linha.horario}}</td>
+                      {% for aula in linha.aulas %}
+                            {% if aula.displicina = "INTERVALO" or aula.displicina = "ALMOÇO" or aula.displicina = "JANTAR"%}
+                                <td colspan="5" class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
+                                {% break %}
+                            {% else %}
+                                <td class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
+                            {% endif %}
+                      {% endfor %}
+                    </tr>
+                {% endfor%}
+             </table>
+            </div>
+        {% endfor %}
     {% endfor %}
-  {% endfor %}
 </div>
-
-<script>
-  function myFunction() {
-      document.getElementById("myDropdown").classList.toggle("show");
-  }
-
-  function filterFunction() {
-      var input, filter, ul, li, a, i;
-      input = document.getElementById("myInput");
-      filter = input.value.toUpperCase();
-      div = document.getElementById("myDropdown");
-      a = div.getElementsByTagName("a");
-      for (i = 0; i < a.length; i++) {
-          if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
-              a[i].style.display = "";
-          } else {
-              a[i].style.display = "none";
-          }
-      }
-  }
- </script>
+    
+<div id = "professores" class="w3-container" style="display:none">
+  <div class="dropdown">
+    <button onclick="myFunction('myDropdownProfessor')" class="dropbtn">Pesquisa</button>
+    <div id="myDropdownProfessor" class="dropdown-content">
+        <input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">
+        {% for professor in site.data.professor.professores %}
+            <a href="#{{professor}}">turma</a>
+        {% endfor %}
+    </div>
+    {% for professor in site.data.horarios.professores %}
+          <div id="{{professor.nome}}">
+            <h2>{{professor.nome}}</h2>
+            <table class="w3-table w3-striped w3-table-all">
+              <tr class="w3-green">
+                {% for coluna in professor.colunas %}
+                    <th class="head_table">{{coluna}}</th>
+                {% endfor %}
+                </tr>
+                {% for linha in professor.linhas%}
+                    <tr>
+                      <td class="hora">{{linha.horario}}</td>
+                      {% for aula in linha.aulas %}
+                            {% if aula.displicina = "INTERVALO" or aula.displicina = "ALMOÇO" or aula.displicina = "JANTAR"%}
+                                <td colspan="5" class="aula">{{aula.disciplina}}<br>{{aula.turma}}</td>
+                                {% break %}
+                            {% else %}
+                                <td class="aula">{{aula.disciplina}}<br>{{aula.turma}}</td>
+                            {% endif %}
+                      {% endfor %}
+                    </tr>
+                {% endfor%}
+             </table>
+            </div>
+        {% endfor %}
+    {% endfor %}
+    </div>
 </div>
