--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ layout: default
             </div>
         {% endfor %}
     {% endfor %}
+  </div>
 </div>
     
 <div id = "professores" class="w3-container" style="display:none">
