--- a/index.html
+++ b/index.html
@@ -12,42 +12,39 @@ layout: default
   <button onclick="Professor()" class="dropbtn">Professores</button>
 </div>
 
-<div id = "turmas" class="w3-container" style="display:none">
+<div id = "professores" class="w3-container" style="display:none">
   <div class="dropdown">
-    <button onclick="myFunction('myDropdownTurma')" class="dropbtn">Pesquisa</button>
-    <div id="myDropdownTurma" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')">
-        {% for turma in site.data.turma.turmas %}
-            <a href="#{{turma}}">turma</a>
+    <button onclick="myFunction('myDropdownProfessor')" class="dropbtn">Pesquisa</button>
+    <div id="myDropdownProfessor" class="dropdown-content">
+        <input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">
+        {% for professor in site.data.professor.professores %}
+            <a href="#{{professor}}">turma</a>
         {% endfor %}
     </div>
-    {% for curso in site.data.horarios.cursos %}
-        <h1 align="center">{{curso.nome}}</h1>
-        {% for turma in curso.turmas %}
-          <div id="{{turma.nome}}">
-            <h2>{{turma.nome}}</h2>
-            <table class="w3-table w3-striped w3-table-all">
-              <tr class="w3-green">
-                {% for coluna in turma.colunas %}
-                    <th class="head_table">{{coluna}}</th>
+    {% for professor in site.data.horarios.professores %}
+        <div id="{{professor.nome}}">
+          <h2>{{professor.nome}}</h2>
+          <table class="w3-table w3-striped w3-table-all">
+          <tr class="w3-green">
+          {% for coluna in professor.colunas %}
+              <th class="head_table">{{coluna}}</th>
+          {% endfor %}
+          </tr>
+          {% for linha in professor.linhas%}
+              <tr>
+                <td class="hora">{{linha.horario}}</td>
+                {% for aula in linha.aulas %}
+                      {% if aula.displicina = "INTERVALO" or aula.displicina = "ALMOÇO" or aula.displicina = "JANTAR"%}
+                          <td colspan="5" class="aula">{{aula.disciplina}}<br>{{aula.turma}}</td>
+                          {% break %}
+                      {% else %}
+                          <td class="aula">{{aula.disciplina}}<br>{{aula.turma}}</td>
+                      {% endif %}
                 {% endfor %}
-                </tr>
-                {% for linha in turma.linhas%}
-                    <tr>
-                      <td class="hora">{{linha.horario}}</td>
-                      {% for aula in linha.aulas %}
-                            {% if aula.displicina = "INTERVALO" or aula.displicina = "ALMOÇO" or aula.displicina = "JANTAR"%}
-                                <td colspan="5" class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
-                                {% break %}
-                            {% else %}
-                                <td class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
-                            {% endif %}
-                      {% endfor %}
-                    </tr>
-                {% endfor%}
-             </table>
-            </div>
-        {% endfor %}
+              </tr>
+            {% endfor%}
+            </table>
+          </div>
     {% endfor %}
   </div>
 </div>
