--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: default
 ---
-<link type= "text/css" rel= "stylesheet" href= "CSS/stylesheet.css">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="CSS/w3.css">
+
 <div style="background-image:url(img/background-title.jpg);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 
@@ -11,7 +9,45 @@ layout: default
   <button onclick="Turma()" class="dropbtn">Turmas</button>
   <button onclick="Professor()" class="dropbtn">Professores</button>
 </div>
-
+<div id = "turmas" class="w3-container" style="display:none">
+  <div class="dropdown">
+    <button onclick="myFunction('myDropdownTurma')" class="dropbtn">Pesquisa</button>
+    <div id="myDropdownTurma" class="dropdown-content">
+        <input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')">
+        {% for turma in site.data.turma.turmas %}
+            <a href="#{{turma}}">turma</a>
+        {% endfor %}
+    </div>
+    {% for curso in site.data.horarios.cursos %}
+        <h1 align="center">{{curso.nome}}</h1>
+        {% for turma in curso.turmas %}
+          <div id="{{turma.nome}}">
+            <h2>{{turma.nome}}</h2>
+            <table class="w3-table w3-striped w3-table-all">
+              <tr class="w3-green">
+                {% for coluna in turma.colunas %}
+                    <th class="head_table">{{coluna}}</th>
+                {% endfor %}
+                </tr>
+                {% for linha in turma.linhas%}
+                    <tr>
+                      <td class="hora">{{linha.horario}}</td>
+                      {% for aula in linha.aulas %}
+                            {% if aula.displicina = "INTERVALO" or aula.displicina = "ALMOÇO" or aula.displicina = "JANTAR"%}
+                                <td colspan="5" class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
+                                {% break %}
+                            {% else %}
+                                <td class="aula">{{aula.disciplina}}<br>{{aula.professor}}</td>
+                            {% endif %}
+                      {% endfor %}
+                    </tr>
+                {% endfor%}
+             </table>
+            </div>
+        {% endfor %}
+    {% endfor %}
+  </div>
+</div>
 <div id = "professores" class="w3-container" style="display:none">
   <div class="dropdown">
     <button onclick="myFunction('myDropdownProfessor')" class="dropbtn">Pesquisa</button>
