--- a/index.html
+++ b/index.html
@@ -2,35 +2,6 @@
 layout: default
 ---
 
-<script>
-  function Turma() {
-    document.getElementById('turmas').style.display = "block";
-    document.getElementById('professores').style.display = "none";
-  }
-  function Professor() {
-      document.getElementById('professores').style.display = "block";
-      document.getElementById('turmas').style.display = "none";
-  }
-  function myFunction(n) {
-    document.getElementById(n).style.display = "block"
-  }
-
-  function filterFunction(n,m) {
-      var input, filter, a, i;
-      input = document.getElementById(n);
-      filter = input.value.toUpperCase();
-      div = document.getElementById(m);
-      a = div.getElementsByTagName("a");
-      for (i = 0; i < a.length; i++) {
-            if (a[i].innerHTML.toUpperCase().indexOf(filter) > -1) {
-                a[i].style.display = "";
-            } else {
-                a[i].style.display = "none";
-            }
-       }
-  }
-</script>
-
 <div style="background-image:url(img/background-title.jpg);height: 200px; width:100%;text-align:center;vertical-align:middle;"class="wrapper"><h1 style="color:white">HORÁRIOS IFPB - Campus Guarabira</h1></div>
 
 <div style="background-image:url(img/ifpb-foto.jpg);height: 500px; width:100%;background-repeat: no-repeat;background-attachment: fixed;background-size: 100% 100%;text-align:center;vertical-align:middle;">
@@ -82,7 +53,7 @@ layout: default
     <div id="myDropdownProfessor" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">
         {% for professor in site.data.professor.professores %}
-            <a href="#{{professor}}">turma</a>
+            <a href="#{{professor}}">professor</a>
         {% endfor %}
     </div>
     {% for professor in site.data.horarios.professores %}
