--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     <div id="myDropdownTurma" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')">
         {% for turma in site.data.turma.turmas %}
-            <a href="#{{turma}}">turma</a>
+            <a href="#{{turma}}">{{turma}}</a>
         {% endfor %}
     </div>
     {% for curso in site.data.horarios.cursos %}
@@ -53,7 +53,7 @@ layout: default
     <div id="myDropdownProfessor" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">
         {% for professor in site.data.professor.professores %}
-            <a href="#{{professor}}">professor</a>
+            <a href="#{{professor}}">{{professor}}</a>
         {% endfor %}
     </div>
     {% for professor in site.data.horarios.professores %}
