--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
   <div class="dropdown">
     <button onclick="myFunction('myDropdownTurma')" class="dropbtn">Pesquisa</button>
     <div id="myDropdownTurma" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')"onclick="myFunction('myDropdownTurma')">
+        <button onclick="myFunction('myDropdownTurma')"><input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')"></button>
         {% for turma in site.data.turma.turmas %}
             <a href="#{{turma}}">{{turma}}</a>
         {% endfor %}
@@ -47,6 +47,7 @@ layout: default
     {% endfor %}
   </div>
 </div>
+
 <div id = "professores" class="w3-container" style="display:none">
   <div class="dropdown">
     <button onclick="myFunction('myDropdownProfessor')" class="dropbtn">Pesquisa</button>
