--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ layout: default
     <div id="myDropdownProfessor" class="dropdown-content">
         <input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">
         {% for professor in site.data.professor.professores %}
-            <a href="#{{professor}}">{{professor}}</a>
+            <button onclick="myFunction('myDropdownProfessor')" class="button"><a href="#{{professor}}">{{professor}}</a></button>
         {% endfor %}
     </div>
     {% for professor in site.data.horarios.professores %}
