--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
   <div class="dropdown">
     <button onclick="myFunction('myDropdownTurma')" class="dropbtn">Pesquisa</button>
     <div id="myDropdownTurma" class="dropdown-content">
-        
+        <!--<input type="text" placeholder="Search.." id="myInputTurma" onkeyup="filterFunction('myInputTurma','myDropdownTurma')">-->
         {% for turma in site.data.turma.turmas %}
             <button onclick="myFunction('myDropdownTurma')" class="button"><a href="#{{turma}}">{{turma}}</a></button>
         {% endfor %}
@@ -52,7 +52,7 @@ layout: default
   <div class="dropdown">
     <button onclick="myFunction('myDropdownProfessor')" class="dropbtn">Pesquisa</button>
     <div id="myDropdownProfessor" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">
+        <!--<input type="text" placeholder="Search.." id="myInputProfessor" onkeyup="filterFunction('myInputProfessor','myDropdownProfessor')">-->
         {% for professor in site.data.professor.professores %}
             <button onclick="myFunction('myDropdownProfessor')" class="button"><a href="#{{professor}}">{{professor}}</a></button>
         {% endfor %}
